tests/invalid/undef_assign.c
int main() {
    y = 2;
    return 0;
}
